Home page view event button taller, fix container gap at top

--- a/src/assets/scss/components/_callout.scss
+++ b/src/assets/scss/components/_callout.scss
@@ -107,7 +107,7 @@
 }
 
 .module-events.callout.large h5 a.button.large {
-	padding: .5em 4em;
+	padding: .7em 4em;
 	margin-bottom: 0;
 	&:hover {
 	background-color: $white;
